--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ header nav h1 {
 }
 
 main {
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -67,11 +68,19 @@ main {
   justify-content: center;
   height: max-content;
 }
-main .datos .card {
+main .contenedor {
+  display: flex;
+  gap: 10rem;
+  width: max-content;
+  margin-left: 10rem;
+  background-color: rgba(255, 255, 255, 0.467);
+  backdrop-filter: blur(5px);
+}
+main .contenedor .datos .card {
   width: max-content;
   height: max-content;
 }
-main .datos .card form {
+main .contenedor .datos .card form {
   gap: 2rem;
   border: solid 3px black;
   width: 30rem;
@@ -81,112 +90,130 @@ main .datos .card form {
   align-items: center;
   justify-content: center;
 }
-main .datos .card form label {
+main .contenedor .datos .card form label {
   font-size: 1.8rem;
   color: rgb(9, 9, 9);
-  border-bottom: solid 3px black;
+  border-bottom: 3px solid rgb(166, 186, 36);
 }
-main .datos .card form input {
+main .contenedor .datos .card form input {
   width: 20rem;
   height: 3rem;
   font-size: 1.3rem;
 }
-main .datos .card form input::placeholder {
+main .contenedor .datos .card form input::placeholder {
   font-size: 1rem;
   background-color: rgb(166, 186, 36);
   text-align: center;
 }
-main .datos .card form button {
+main .contenedor .datos .card form button {
   background-color: rgb(166, 186, 36);
   font-size: 1.3rem;
   padding: 0.5rem 1rem;
 }
-main .datos .card form button:hover {
+main .contenedor .datos .card form button:hover {
   transform: scale(1.09);
 }
-main .datos .card form input {
+main .contenedor .datos .card form input {
   width: 15rem;
   background: transparent;
   height: 2rem;
   cursor: pointer;
 }
-main .datos .card form input:hover {
+main .contenedor .datos .card form input:hover {
   background-color: rgb(166, 186, 36);
 }
-main .datos .card form input:focus {
+main .contenedor .datos .card form input:focus {
   transform: scale(1.1);
 }
-main .preguntas {
+main .contenedor .preguntas {
   width: 30rem;
-  height: 30rem;
+  height: 15rem;
   border: solid 3px black;
 }
-main .preguntas div {
+main .contenedor .preguntas div {
   width: 30rem;
-  height: 30rem;
+  height: 15rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-main .preguntas div h2 {
+main .contenedor .preguntas div h2 {
   font-size: 1.5rem;
   text-align: center;
   border: solid 3px black;
 }
-main .preguntas div .anclas {
+main .contenedor .preguntas div div {
+  width: 25rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 3rem;
 }
-main .preguntas div .anclas a {
-  width: 15rem;
-  height: 3rem;
-  border: solid 3px black;
-  font-size: 1.4rem;
-  text-decoration: none;
-  text-align: center;
-  color: black;
-  padding-top: 0.5rem;
-}
-main .preguntas div .anclas a:hover {
+main .contenedor .preguntas div div form select {
   background-color: rgb(166, 186, 36);
-  font-size: 1.6rem;
+  text-transform: capitalize;
+  text-align: center;
+  font-size: 2rem;
+  width: 25rem;
+  height: 5rem;
+}
+main .contenedor .preguntas div div form select option {
+  font-size: 1rem;
+}
+main .contenedor .preguntas div div form button {
+  font-size: 1.4rem;
+  background-color: rgb(166, 186, 36);
+  width: 5rem;
+  height: 3rem;
 }
 main .contenedorPreguntas {
-  width: 35rem;
+  margin-left: 5rem;
+  margin-bottom: 5rem;
   height: 35rem;
+  width: 35rem;
+  display: grid;
+  justify-content: center;
+  column-gap: 5rem;
+  row-gap: 10rem;
+}
+main .contenedorPreguntas .contenido {
+  text-align: center;
+  width: 35rem;
+  height: 36rem;
   border: 3px solid black;
   display: flex;
   gap: 3rem;
   flex-direction: column;
   justify-content: start;
 }
-main .contenedorPreguntas h2 {
+main .contenedorPreguntas .contenido h2 {
   margin-top: 1rem;
 }
-main .contenedorPreguntas div {
+main .contenedorPreguntas .contenido div form {
   display: flex;
   gap: 1.3rem;
   flex-direction: column;
-}
-main .contenedorPreguntas div div {
-  display: flex;
   align-items: center;
 }
-main .contenedorPreguntas div div label {
+main .contenedorPreguntas .contenido div form label {
   font-size: 1.3rem;
   border-bottom: 3px solid rgb(166, 186, 36);
+  cursor: pointer;
 }
-main .contenedorPreguntas div div input {
+main .contenedorPreguntas .contenido div form input {
   width: 20rem;
   height: 2rem;
   font-size: 1rem;
 }
-main .contenedorPreguntas div div input:hover {
+main .contenedorPreguntas .contenido div form input:hover {
   background-color: rgb(166, 186, 36);
 }
-main .contenedorPreguntas div div button {
+main .contenedorPreguntas .contenido div form button {
   font-size: 1.5rem;
   padding: 0.6rem;
+  background-color: rgb(166, 186, 36);
+}
+main .contenedorPreguntas .contenido div form button:hover {
+  transform: scale(1.1);
+  font-size: 150%;
 }
 
 /*# sourceMappingURL=style.css.map */
