--- a/css/header.css
+++ b/css/header.css
@@ -8,24 +8,27 @@ header nav {
   gap: 5rem;
   margin-top: 3rem;
 }
-header nav a {
+header nav #reset {
   border: 1px solid;
   font-size: 2rem;
   padding: 1rem;
   color: black;
+  background-color: rgba(215, 204, 204, 0.434);
+  backdrop-filter: blur(10px);
 }
-header nav a:hover {
+header nav #reset:hover {
   transform: scale(1.05);
 }
-header nav button {
+header nav #verPuntos {
   border: 1px solid;
   font-size: 2rem;
+  background-color: rgba(215, 204, 204, 0.373);
+  backdrop-filter: blur(10px);
   padding: 1rem;
   color: black;
-  background-color: transparent;
   cursor: pointer;
 }
-header nav button:hover {
+header nav #verPuntos:hover {
   transform: scale(1.05);
 }
 header nav h1 {
