--- a/css/style.css
+++ b/css/style.css
@@ -32,24 +32,27 @@ header nav {
   gap: 5rem;
   margin-top: 3rem;
 }
-header nav a {
+header nav #reset {
   border: 1px solid;
   font-size: 2rem;
   padding: 1rem;
   color: black;
+  background-color: rgba(215, 204, 204, 0.434);
+  backdrop-filter: blur(10px);
 }
-header nav a:hover {
+header nav #reset:hover {
   transform: scale(1.05);
 }
-header nav button {
+header nav #verPuntos {
   border: 1px solid;
   font-size: 2rem;
+  background-color: rgba(215, 204, 204, 0.373);
+  backdrop-filter: blur(10px);
   padding: 1rem;
   color: black;
-  background-color: transparent;
   cursor: pointer;
 }
-header nav button:hover {
+header nav #verPuntos:hover {
   transform: scale(1.05);
 }
 header nav h1 {
@@ -73,10 +76,10 @@ main .contenedor {
   gap: 10rem;
   width: max-content;
   margin-left: 10rem;
-  background-color: rgba(255, 255, 255, 0.467);
-  backdrop-filter: blur(5px);
 }
 main .contenedor .datos .card {
+  background-color: rgba(215, 204, 204, 0.301);
+  backdrop-filter: blur(10px);
   width: max-content;
   height: max-content;
 }
@@ -129,6 +132,8 @@ main .contenedor .preguntas {
   width: 30rem;
   height: 15rem;
   border: solid 3px black;
+  background-color: rgba(215, 204, 204, 0.434);
+  backdrop-filter: blur(10px);
 }
 main .contenedor .preguntas div {
   width: 30rem;
@@ -180,6 +185,8 @@ main .contenedorPreguntas .contenido {
   height: 36rem;
   border: 3px solid black;
   display: flex;
+  background-color: rgba(215, 204, 204, 0.434);
+  backdrop-filter: blur(10px);
   gap: 3rem;
   flex-direction: column;
   justify-content: start;
