--- a/css/generales.css
+++ b/css/generales.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(../assets/fondo.jpg);
+  background-image: url(../assets/fondo2.jpg);
   background-size: cover;
   height: 100vh;
 }
