--- a/css/header.css
+++ b/css/header.css
@@ -8,33 +8,29 @@ header nav {
   gap: 5rem;
   margin-top: 3rem;
 }
-header nav #reset {
+header nav button {
   border: 1px solid;
   font-size: 2rem;
   padding: 1rem;
   color: black;
-  background-color: rgba(215, 204, 204, 0.434);
-  backdrop-filter: blur(10px);
-}
-header nav #reset:hover {
-  transform: scale(1.05);
-}
-header nav #verPuntos {
-  border: 1px solid;
-  font-size: 2rem;
-  background-color: rgba(215, 204, 204, 0.373);
-  backdrop-filter: blur(10px);
-  padding: 1rem;
-  color: black;
+  background-color: rgb(166, 186, 36);
   cursor: pointer;
 }
-header nav #verPuntos:hover {
+header nav button:hover {
   transform: scale(1.05);
 }
 header nav h1 {
   font-size: 3rem;
   text-align: center;
   text-transform: capitalize;
+  background-color: rgb(166, 186, 36);
+  border: 3px solid black;
+  padding: 1rem;
+}
+header nav h1:hover {
+  transition: 0.3s;
+  border: 7px solid rgb(166, 186, 36);
+  font-size: 3.4rem;
 }
 
 /*# sourceMappingURL=header.css.map */
