--- a/scss/generales.scss
+++ b/scss/generales.scss
@@ -7,7 +7,7 @@
 body{
     
 
-    background-image: url(../assets/fondo.jpg);
+    background-image: url(../assets/fondo2.jpg);
     background-size: cover;
 
     height: 100vh;
