--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ main .contenedorPreguntas {
 main .contenedorPreguntas .contenido {
   text-align: center;
   width: 35rem;
-  height: 36rem;
+  height: 38rem;
   border: 3px solid black;
   display: flex;
   background-color: rgba(215, 204, 204, 0.434);
@@ -129,7 +129,7 @@ main .contenedorPreguntas .contenido {
   justify-content: start;
 }
 main .contenedorPreguntas .contenido h2 {
-  margin-top: 1rem;
+  margin: 1rem;
 }
 main .contenedorPreguntas .contenido div form {
   display: flex;
