--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ main {
 }
 main .contenedor {
   display: flex;
-  gap: 10rem;
+  gap: 2rem;
   width: max-content;
   margin-left: 10rem;
 }
@@ -106,19 +106,49 @@ main .contenedor .preguntas div div form button {
   width: 5rem;
   height: 3rem;
 }
+main .contenedor #mostrarUsuarios .tabla {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+  border: 10px solid rgb(166, 186, 36);
+  height: 20rem;
+  background-color: white;
+  color: black;
+}
+main .contenedor #mostrarUsuarios .tabla #trjs {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+}
+main .contenedor #mostrarUsuarios .tabla #trjs .td {
+  display: flex;
+  flex-direction: row;
+  padding: 0.4rem;
+  padding-right: 0.9rem;
+  height: max-content;
+  border: 3px solid rgb(166, 186, 36);
+  width: 100%;
+}
+main .contenedor #mostrarUsuarios .tabla .tr {
+  border-bottom: 3px solid rgb(166, 186, 36);
+  gap: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 main .contenedorPreguntas {
-  margin-left: 5rem;
   margin-bottom: 5rem;
   height: 35rem;
   width: 35rem;
   display: grid;
   justify-content: center;
   column-gap: 5rem;
-  row-gap: 10rem;
+  row-gap: 5rem;
 }
 main .contenedorPreguntas .contenido {
   text-align: center;
-  width: 35rem;
+  width: 30rem;
   height: 38rem;
   border: 3px solid black;
   display: flex;
