--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 
 body {
   background-image: url(../assets/fondo2.jpg);
-  background-size: cover;
   height: 100vh;
 }
 
@@ -34,7 +33,7 @@ header nav {
 }
 header nav button {
   border: 1px solid;
-  font-size: 2rem;
+  font-size: 1.7rem;
   padding: 1rem;
   color: black;
   background-color: rgb(166, 186, 36);
@@ -42,19 +41,19 @@ header nav button {
 }
 header nav button:hover {
   transform: scale(1.05);
+  border: 6px solid black;
 }
 header nav h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
   text-transform: capitalize;
   background-color: rgb(166, 186, 36);
-  border: 3px solid black;
   padding: 1rem;
 }
 header nav h1:hover {
   transition: 0.3s;
-  border: 7px solid rgb(166, 186, 36);
-  font-size: 3.4rem;
+  border: 6px solid black;
+  font-size: 2.8rem;
 }
 
 main {
@@ -69,7 +68,7 @@ main {
 }
 main .contenedor {
   display: flex;
-  gap: 10rem;
+  gap: 2rem;
   width: max-content;
   margin-left: 10rem;
 }
@@ -165,19 +164,49 @@ main .contenedor .preguntas div div form button {
   width: 5rem;
   height: 3rem;
 }
+main .contenedor #mostrarUsuarios .tabla {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+  border: 10px solid rgb(166, 186, 36);
+  height: 20rem;
+  background-color: white;
+  color: black;
+}
+main .contenedor #mostrarUsuarios .tabla #trjs {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+}
+main .contenedor #mostrarUsuarios .tabla #trjs .td {
+  display: flex;
+  flex-direction: row;
+  padding: 0.4rem;
+  padding-right: 0.9rem;
+  height: max-content;
+  border: 3px solid rgb(166, 186, 36);
+  width: 100%;
+}
+main .contenedor #mostrarUsuarios .tabla .tr {
+  border-bottom: 3px solid rgb(166, 186, 36);
+  gap: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 main .contenedorPreguntas {
-  margin-left: 5rem;
   margin-bottom: 5rem;
   height: 35rem;
   width: 35rem;
   display: grid;
   justify-content: center;
   column-gap: 5rem;
-  row-gap: 10rem;
+  row-gap: 5rem;
 }
 main .contenedorPreguntas .contenido {
   text-align: center;
-  width: 35rem;
+  width: 30rem;
   height: 38rem;
   border: 3px solid black;
   display: flex;
