--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,7 @@ main {
 
     .contenedor {
         display: flex;
-        gap: 10rem;
+        gap: 2rem;
         width: max-content;
         margin-left: 10rem;
 
@@ -161,7 +161,45 @@ main {
             }
         }
 
+        #mostrarUsuarios{
+            .tabla{
+                display: flex;
+                flex-direction: column;
+                width: max-content;
+                border: 10px solid rgb(166, 186, 36) ;
+                height: 20rem;
+                background-color: white;
+                
 
+                color: black;
+                #trjs{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0rem;
+                    .td{
+                        display: flex;
+                        flex-direction: row;
+                        padding: 0.4rem;
+                        padding-right: 0.9rem;
+                        height: max-content;
+                        border: 3px solid rgb(166, 186, 36) ;
+                        width: 100%;
+
+                        
+                        }
+                }
+
+                .tr{
+                    border-bottom: 3px solid rgb(166, 186, 36) ;
+                    gap: 1rem;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    
+                }
+            }
+        }
 
     }
 
@@ -170,7 +208,6 @@ main {
     //contendeor de los otros html
 
     .contenedorPreguntas {
-        margin-left: 5rem;
         margin-bottom: 5rem;
         height: 35rem;
         width: 35rem;
@@ -179,11 +216,11 @@ main {
         justify-content: center;
 
         column-gap: 5rem;
-        row-gap: 10rem;
+        row-gap: 5rem;
 
         .contenido {
             text-align: center;
-            width: 35rem;
+            width: 30rem;
             height: 38rem;
             border: 3px solid black;
             display: flex;
