--- a/scss/generales.scss
+++ b/scss/generales.scss
@@ -1,29 +1,29 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
-    
+body {
 
-    background-image: url(../assets/fondo2.jpg);
-    
-    height: 100vh;
+
+    background-image: url(https://as1.ftcdn.net/v2/jpg/02/94/72/38/1000_F_294723820_jBkkeYxbp31YBRrhU2pZBYzRywqhMlav.jpg);
+    background-size: cover;
+    gap: 0rem;
 }
 
 
-p{
+p {
     text-transform: capitalize;
 
 }
 
-label{
+label {
     text-transform: capitalize;
 
 }
 
-h2{
+h2 {
     text-transform: capitalize;
 
 }
