--- a/css/generales.css
+++ b/css/generales.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  background-image: url(../assets/fondo2.jpg);
-  height: 100vh;
+  background-image: url(https://as1.ftcdn.net/v2/jpg/02/94/72/38/1000_F_294723820_jBkkeYxbp31YBRrhU2pZBYzRywqhMlav.jpg);
+  background-size: cover;
+  gap: 0rem;
 }
 
 p {
