--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  background-image: url(../assets/fondo2.jpg);
-  height: 100vh;
+  background-image: url(https://as1.ftcdn.net/v2/jpg/02/94/72/38/1000_F_294723820_jBkkeYxbp31YBRrhU2pZBYzRywqhMlav.jpg);
+  background-size: cover;
+  gap: 0rem;
 }
 
 p {
@@ -23,37 +24,39 @@ h2 {
 
 header {
   height: 5rem;
+  width: 100%;
 }
 header nav {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
-  gap: 5rem;
+  gap: 3rem;
   margin-top: 3rem;
 }
 header nav button {
   border: 1px solid;
-  font-size: 1.7rem;
+  font-size: 2rem;
   padding: 1rem;
+  height: max-content;
   color: black;
   background-color: rgb(166, 186, 36);
   cursor: pointer;
 }
 header nav button:hover {
   transform: scale(1.05);
-  border: 6px solid black;
 }
 header nav h1 {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   text-align: center;
   text-transform: capitalize;
   background-color: rgb(166, 186, 36);
+  border: 3px solid black;
+  height: max-content;
   padding: 1rem;
 }
 header nav h1:hover {
   transition: 0.3s;
-  border: 6px solid black;
-  font-size: 2.8rem;
+  border: 1px solid rgb(166, 186, 36);
 }
 
 main {
@@ -62,7 +65,7 @@ main {
   align-items: center;
   flex-direction: row;
   gap: 3rem;
-  margin-top: 6rem;
+  margin-top: 2rem;
   justify-content: center;
   height: max-content;
 }
