--- a/css/generales.css
+++ b/css/generales.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(https://as1.ftcdn.net/v2/jpg/02/94/72/38/1000_F_294723820_jBkkeYxbp31YBRrhU2pZBYzRywqhMlav.jpg);
+  background-image: url(../assets/image0.jpg);
   background-size: cover;
   gap: 0rem;
 }
