actualizaciones en cuanto archivos sin uso

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,1 @@
-@import"generales", "responsive", "header", "main", "footer", "titulos", "mixin", "variables";
+@import"generales",  "header", "main";
